# whilecat

./: LICENSE
app/: .gitignore  config.example.yaml  go.mod  go.sum  whilecat
app/cmd/: main.go
app/internal/config/: parse.go
app/internal/ui/: app.go  focus.go  model.go  player.go  statusbar.go  styles.go  tracklist.go  update.go  view.go
catcher/: .gitignore  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py  track_crud.py  track_routes.py  tracks_orm.db  user_crud.py  user_routes.py
catcher/tests/: README.md  __init__.py  conftest.py  test_api.py  tracks_orm.db
stream_proxy/: .golangcli.yaml  go.mod  go.sum
stream_proxy/cmd/: main.go
stream_proxy/internal/delivery/http/: router.go
stream_proxy/pkg/http/client/: client.go
stream_proxy/pkg/http/lib/: copy_headers.go
whilecat-app/: .gitignore  package-lock.json  package.json  vite.config.ts
whilecat-app/src/: App.css  App.tsx  index.css
whilecat-app/src-tauri/: Cargo.toml  tauri.conf.json
whilecat-app/src-tauri/src/: lib.rs  main.rs  rpc.rs
whilecat-app/src/components/: BottomPlayer.tsx  CategoryFilter.tsx  Header.tsx  HeroCarousel.tsx  PlayerControls.tsx  Playlist.tsx  ProgressBar.tsx  Sidebar.tsx  SongGrid.tsx  StatusBar.tsx  TrackInfo.tsx  Visualizer.tsx  VolumeControl.tsx
whilecat-app/src/components/icons/: ChevronIcon.tsx  GridIcon.tsx  HeartIcon.tsx  HomeIcon.tsx  LogoutIcon.tsx  MusicIcon.tsx  PauseIcon.tsx  PlayIcon.tsx  PlaylistIcon.tsx  RepeatIcon.tsx  UserIcon.tsx  (+7 more)
whilecat-app/src/hooks/: use-discord-rpc.tsx  use-track.tsx
whilecat-app/src/pages/: Index.tsx
(+4 files in other folders)
