[project]
name = "catcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.1",
    "aiosqlite>=0.21.0",
    "fastapi>=0.119.0",
    "greenlet>=3.2.4",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "yt-dlp>=2025.10.14",
]
